# GammaRay-plugin-examples

./: .gitignore  CMakeLists.txt  README
lcdwidgetinspector/: CMakeLists.txt  lcdwidgetinspector.cpp  lcdwidgetinspector.desktop  lcdwidgetinspector.h  lcdwidgetinspector.json  lcdwidgetinspector_ui.desktop  lcdwidgetinspectorwidget.cpp  lcdwidgetinspectorwidget.h  lcdwidgetinspectorwidget.ui  main.cpp
openglsupport/: CMakeLists.txt  main.cpp  qtopenglsupport.cpp  qtopenglsupport.desktop  qtopenglsupport.h  qtopenglsupport.json
